--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 :root {
-  --teal: #2b6577;
+  --teal: #2b6577; 
+
+}
+p {
+margin-top: 5px; 
+font-size: large;  
 
 }
 body {
@@ -92,3 +97,4 @@ font-weight: bold;
 .container {
   color: var(--teal);
 }
+
